# rzbackup

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  build.rs
etc/: build-package  create-test-data  release-checklist  zbackup-proto.proto
etc/legacy-wrappers/: rzbackup  rzbackup-client  rzbackup-convert  rzbackup-decrypt  rzbackup-restore  rzbackup-server
examples/: restore.rs
misc/: mod.rs
src/: build.rs  lib.rs  main.rs  metadata.rs  misc.rs  randaccess.rs  repo.rs
src/client/: client.rs  clientexit.rs  clientreindex.rs  clientrestore.rs  clientstatus.rs  mod.rs
src/commands/: client.rs  decrypt.rs  mod.rs  restore.rs
src/compress/: lzma.rs  mod.rs  zlib.rs
src/convert/: balance_bundles.rs  balance_indexes.rs  balancebundles.rs  balanceindexes.rs  check_backups.rs  check_bundles.rs  check_indexes.rs  checkbackups.rs  checkbundles.rs  checkindexes.rs  gc_bundles.rs  gc_indexes.rs  gcbundles.rs  gcindexes.rs  mod.rs  rebuild_indexes.rs  rebuildindexes.rs  utils.rs
src/misc/: args.rs  atomic_file_writer.rs  cloning_shared_future.rs  command.rs  concurrent_controller.rs  error.rs  fs.rs  io.rs  mod.rs  protobuf.rs
src/server/: handler.rs  mod.rs  server.rs
src/zbackup/: bundle_loader.rs  chunk_cache.rs  crypto.rs  data.rs  file.rs  index_cache.rs  metadata.rs  mod.rs  proto.rs  randaccess.rs  read.rs  repo.rs  repository.rs  repository_core.rs  storage.rs  write.rs
src/zbackup/crypto/: crypto_key.rs  crypto_read.rs  crypto_write.rs  cryptokey.rs  cryptoread.rs  cryptowrite.rs  mod.rs
src/zbackup/disk_format/: adler_read.rs  adler_write.rs  backup_format.rs  bundle_format.rs  encryption_key_info.rs  file_format.rs  header_format.rs  index_format.rs  instruction_format.rs  mod.rs  protobuf_message.rs  storage_info_format.rs
website/: Makefile  README.md  fabfile.py  pelicanconf.py
website/content/posts/: 2016-gitlab-pages.md
