[package]

	name = "rzbackup"
	version = "3.2.2"
	description = "RZBackup"
	authors = [ "James Pharaoh <james@pharaoh.uk>" ]
	license = "Apache-2.0"
	homepage = "http://rzbackup.com"
	repository = "https://gitlab.wellbehavedsoftware.com/well-behaved-software/rzbackup"
	readme = "README.md"

	build = "src/build.rs"

	exclude = [
		"src/zbackup/metadata.rs",
		"target/**/*",
		"work/**/*",
	]

[dependencies]

	adler32 = "0.3"
	byteorder = "0.5"
	clap = "2.13"
	errno = "0.2"
	futures = "0.1"
	futures-cpupool = "0.1"
	lazy_static = "0.2"
	libc = "0.2"
	lru-cache = "0.0"
	minilzo = "0.1"
	num_cpus = "1.1"
	output = "0.4"
	protobuf = "1.0"
	rand = "0.3"
	rust-crypto = "0.2"
	rustc-serialize = "0.3"

[[bin]]

	name = "rzbackup"
	path = "src/main.rs"
	doc = false

# ex: noet ts=4 filetype=cargo
