[package]

	name = "rzbackup"
	version = "3.3.0"
	description = "RZBackup"
	authors = [ "James Pharaoh <james@pharaoh.uk>" ]
	license = "Apache-2.0"
	homepage = "http://rzbackup.com"
	repository = "https://gitlab.wellbehavedsoftware.com/well-behaved-software/rzbackup"
	readme = "README.md"

	build = "src/build.rs"

	exclude = [
		"src/zbackup/metadata.rs",
		"target/**/*",
		"work/**/*",
	]

[dependencies]

	adler32 = "1.0"
	byteorder = "1.0"
	clap = "2.20"
	errno = "0.2"
	futures = "0.1"
	futures-cpupool = "0.1"
	lazy_static = "0.2"
	libc = "0.2"
	lru-cache = "0.1"
	minilzo = "0.1"
	num_cpus = "1.2"
	output = "0.5"
	protobuf = "1.1"
	rand = "0.3"
	regex = "0.2"
	rust-crypto = "0.2"
	rustc-serialize = "0.3"

[[bin]]

	name = "rzbackup"
	path = "src/main.rs"
	doc = false

[profile.dev]

	opt-level = 0
	debug = true
	lto = false

[profile.release]

	opt-level = 3
	debug = false
	lto = true

# ex: noet ts=4 filetype=cargo
